# Task_Manger_Project

./: .gitignore  PRIORITY_CRITERIA.md  README.md  REVIEW.md  UX_REDESIGN.md  build.gradle  gradle.properties  make_commits.py  settings.gradle  setup.sh
alarm-system/: jest.config.js  package-lock.json  package.json  tsconfig.json
alarm-system/db/: migration.sql
alarm-system/src/: app.ts
alarm-system/tests/: alarm.test.ts  availableTime.test.ts  (+4 more)
audio-daemon/: README.md  pyproject.toml
audio-daemon/scripts/: install-linux.sh  install-macos.sh  install-windows.ps1  uninstall-linux.sh  uninstall-macos.sh  uninstall-windows.ps1
audio-daemon/service-templates/: com.teamsigma.audiodaemon.plist  register-task.ps1  teamsigma-audiodaemon.service  unregister-task.ps1
audio-daemon/src/audio_daemon/: __init__.py  __main__.py  activation.py  audio.py  capture.py  clap.py  config.py  detection.py  edit_session.py  health.py  ipc.py  model_slot.py  permissions.py  pidfile.py  protocol.py  server.py  service_manager.py  wakeword.py
audio-daemon/src/audio_daemon/settings/: __init__.py  atomic_writer.py  edit_session.py  migrator.py  orchestrator.py  schema.py  store.py  watcher.py
audio-daemon/tests/: test_activation.py  test_capture.py  test_clap.py  test_hotswap.py  test_ipc.py  test_model_slot.py  test_server.py  test_service_manager.py  test_settings.py
frontend/: .env.development  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
presentation/: SIGMA_소개.pptx  build_pptx.py  capture_more.mjs  capture_slides.mjs
(+268 files in other folders)
